crates/decorous-backend/src/prerender/snapshots/decorous_backend__prerender__tests__reactive_css_is_merged_with_existing_inline_styles-2.snap
---
source: crates/decorous-backend/src/prerender/mod.rs
expression: output
---
const dirty = new Uint8Array(new ArrayBuffer(1));
const elems = {"1":replace(document.getElementById("1")),"0":document.getElementById("0"),};
function replace(node) {
  const text = document.createTextNode("");
  node.replaceWith(text);
  return text;
}
function __init_ctx() {
  let color = "blue"
  return [color];
}
const ctx = __init_ctx();
let updating = false;
dirty.fill(255);
__update(dirty, true);
dirty.fill(0);
function __update(dirty, initial) {
  if (dirty[0] & 1) elems[1].data = ctx[0];
  if (dirty[0] & 1) elems["0"].setAttribute("style", `${`background: green;`} --decor-0: ${ctx[0]}; `);
}
__update(null, true);
function __schedule_update(ctx_idx, val) {
  ctx[ctx_idx] = val;
  dirty[Math.max(Math.ceil(ctx_idx / 8) - 1, 0)] |= 1 << (ctx_idx % 8);
  if (updating) return;
  updating = true;
  Promise.resolve().then(() => {
    __update(dirty, false);
    updating = false;
    dirty.fill(0);
  });
}

---
<p class="decor-0" id="0"><span id="1"></span></p>
---
p.decor-0 {
  color: var(--decor-0);
}

